Fix button position on Mobile

--- a/css/theme.scss
+++ b/css/theme.scss
@@ -471,6 +471,10 @@ a.clicky-card {
 	margin-right: 0.5rem;
 }
 
+.ml-2 {
+	margin-left: 0.5rem;
+}
+
 //Padding
 .head-padding {
 	padding-top: 5rem;
